# playground-qt

./: CMakeLists.txt  Main.qml  main.cpp  mainviewmodel.cpp  mainviewmodel.h
